--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -11,7 +11,7 @@
     Package name:
     36:E9:98:AD:64:C0:F7:4E:8B:FA:2E:D7:46:AA:63:94:35:50:17:A2
 
-    SHA-1 certificate fingerprint:
+    SHA-one certificate fingerprint:
     36:E9:98:AD:64:C0:F7:4E:8B:FA:2E:D7:46:AA:63:94:35:50:17:A2
 
     Alternatively, follow the directions here:
