--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,7 +6,7 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/HashTags"
+            android:id="@+id/examples"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/hastags" />
         <item
